# aind-data-transfer

./: .gitignore  MANIFEST.in  README.md  post_install.sh  pyproject.toml
.github/workflows/: ci.yml  tag.yml  tag_and_publish.yml
conf/: ephys_upload_job_configs.yml  exaspim_cron_job_config.yml  smartspim_upload_job_configs.yml  transcode_job_configs.yml
conf/dask/: dask-config.yaml
docker/: README.md  docker-compose.yml
docker/master/: Dockerfile  slurm.conf
docker/node/: Dockerfile  slurm.conf
scripts/: README.md  align_tiles.py  chron_job_configs.yml  compress_ome_zarr.py  convert_n5_zarr.py  create_neuroglancer_links.py  gcs_upload.py  ispim_cron_job.py  make_mips.py  openephys_job.py  processing_manifest.py  run_openephys_jobs.py  run_openephys_jobs_template.py  s3_upload.py  smartspim_cron_job.py  smartspim_job.py  validate_datasets.py  write_bdv_n5.py  write_ome_zarr.py
scripts/Exaspim_ingest/: ExM Sample Tracking smartsheet.xlsx  ExM Sample Tracking.xlsx  ingest_exaspim.ipynb
scripts/Exaspim_ingest/original_spec_files/: 576404_invalid.json  603033_invalid.json  609105_invalid.json  609107_invalid.json  609281_invalid.json  613814_invalid.json  614978_invalid.json  614980_invalid.json  615296_invalid.json  618583_invalid.json  618584_invalid.json  620629_invalid.json  620631_invalid.json  634173_invalid.json  648077_invalid.json  648079_invalid.json  648434_invalid.json  648435_invalid.json  648436_invalid.json  648695_invalid.json  648696_invalid.json  648697_invalid.json  648698_invalid.json  648699_invalid.json  648700_invalid.json  648858_invalid.json  648860_invalid.json  648861_invalid.json  648862_invalid.json  650008_invalid.json  650009_invalid.json  650010_invalid.json  650011_invalid.json  650819_invalid.json  651305_invalid.json  651324_invalid.json  651327_invalid.json  651895_invalid.json  651897_invalid.json  652441_invalid.json  (+39 more)
scripts/MRI_ingest/: ingest_MRI.ipynb  scratch.ipynb
scripts/MRI_ingest/output/: test_mri_session.json
scripts/cluster/: config.py  submit.py
scripts/singularity/: Dockerfile  README.md  aind_data_transfer.def  build_sif.sh  run_build.sh
src/aind_data_transfer/: __init__.py  codeocean.py  configuration_loader.py  gcs.py  readers.py  s3.py  writers.py
src/aind_data_transfer/config_loader/: __init__.py  base_config.py  configuration_loader.py  ecephys_config.py  endpoints_config.py  ephys_config_loader.py  ephys_configuration_loader.py  generic_config_loader.py  imaging_configuration_loader.py
src/aind_data_transfer/jobs/: basic_job.py  ecephys_job.py  exaspim_job.py  multiple_upload_job.py  openephys_job.py  s3_upload_job.py  smartspim_job.py  tiff_upload_job.py  transcode_job.py  zarr_upload_job.py
src/aind_data_transfer/jobs/cronjobs/: exaspim_cron_job.py
src/aind_data_transfer/jobs/cronjobs/templates/: zarr_upload_job_template.sh
src/aind_data_transfer/readers/: __init__.py  ephys_readers.py  imaging_readers.py
src/aind_data_transfer/transcode/: ome_zarr.py
src/aind_data_transfer/transformations/: compressors.py  converters.py  deinterleave.py  ephys_compressors.py  file_io.py  flatfield_correction.py  generic_compressors.py  imaging_compressors.py  metadata_creation.py  ome_zarr.py  tiff_converter.py  video_compressors.py
src/aind_data_transfer/util/: chunk_utils.py  dask_utils.py  env_utils.py  file_utils.py  io_utils.py  npopto_correction.py  s3_utils.py  setup_logging.py
src/aind_data_transfer/writers/: __init__.py  ephys_writers.py  imaging_writers.py
src/cluster/: __init__.py  clusters.py
src/hello_world/: message_handlers.py
src/transfer/: __init__.py  clip_dat_files.py  codeocean.py  compressors.py  configuration_loader.py  gcs.py  parsers.py  readers.py  s3.py  writers.py
src/transfer/jobs/: open_ephys_job.py  openephys_job.py
src/transfer/transcode/: io.py  ome_zarr.py
src/transfer/transformations/: metadata_creation.py
src/transfer/util/: arrayutils.py  chunk_utils.py  file_utils.py  fileutils.py  io_utils.py  npopto_correction.py
src/util/: fileutils.py
templates/: jobqueue.yaml  queue_slurm_job.sh
tests/: test_HCR_xml_metadata.py  test_base_config.py  test_basic_job.py  test_chunk_utils.py  test_codeocean_requests.py  test_compressors.py  test_configuration_loader.py  test_deinterleave.py  test_ecephys_compression.py  test_ecephys_configs.py  test_ecephys_job.py  test_endpoints_config_loader.py  test_ephys_config_loader.py  test_ephys_readers.py  test_file_io.py  test_file_utils.py  test_flatfield_correction.py  test_gcs_uploader.py  test_generic_upload_job.py  test_imaging_config_loader.py  test_imaging_readers.py  test_io_utils.py  test_message_handler.py  test_metadata_creation.py  test_metadata_schema_client.py  test_ome_zarr.py  test_parsers.py  test_readers.py  test_s3_transfer.py  test_tiff_converter.py  test_zarr_upload_job.py
tests/resources/: ephys_upload_job_test_configs.yml
tests/resources/imaging/diSPIM_12345_2023-03-16_00-00-00/: dataset_description.json  subject.json
tests/resources/imaging/exaSPIM_125L_2022-08-05_17-25-36/: dataset_description.json  zarr_configs.yaml
tests/resources/imaging/iSPIM_test/HCR_677594-Christian-ID_2023-10-20_15-10-36/: Reference.xml  acquisition.json  config.toml  diSPIM_acquisition.json
tests/resources/imaging/mesoSPIM_125L_2022-08-18_17-05-00/: procedures.json
tests/resources/imaging/smartSPIM_12345_2023-03-16_00-00-00/: CHANGES  instrument.json
tests/resources/test_configs/: ephys_upload_job_test_configs.yml  example_configs_src_pattern1.yml  example_configs_src_pattern2.yml  jobs_list.csv  jobs_list2.csv  jobs_list3.csv  jobs_list4.csv  jobs_list_2.csv
tests/resources/test_configs/imaging/: imaging_transcode_job_test_config.yml  transcode_job_test_config.yml
tests/resources/test_metadata/: data_description.json  metadata.json  procedures.json  processing.json  processing_schema.json  subject.json
tests/resources/v0.6.x_neuropixels_multiexp_multistream/Videos/: a_video_file.avi  another_video_file.avi  video_ref.csv
