[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-data-transfer"
description = "Services for compression and transfer of aind-data to the cloud"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    'pandas==2.2.0',
    's3fs==2023.12.2',
    's3transfer[crt]==0.7.0',
    'boto3[crt]==1.29.6',
    'numpy==1.26.1',
    'pyyaml==6.0.1',
    'google-cloud-storage==2.12.0',
    'pyminizip==0.2.6',
    'aind-codeocean-api>=0.4.0',
    'aind-data-schema==0.26.5',
    'aind-metadata-service[client]>=0.2.5',
    'tqdm==4.64.1',
    'aind-data-access-api[secrets]>=0.4.0',
    'toml==0.10.2',
    "zarr==2.16.1",
    'numcodecs==0.11.0',
]

[project.optional-dependencies]
dev = [
    'aind-data-transfer[full]',
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort',
    'Sphinx'
]
ephys = [
    'spikeinterface[full]>=0.100.0',
    'probeinterface==0.2.21',
    'wavpack-numcodecs>=0.1.3,<=0.1.5'
]
imaging = [
    'argschema==3.0.4',
    'dask==2024.1.0',
    'distributed==2024.1.0',
    'bokeh!=3.0.*,>=2.4.2',
    'gcsfs==2023.12.2.post1',
    'xarray-multiscale==2.1.0',
    'parameterized==0.9.0',
    'ome-zarr==0.8.3',
    'chardet==5.1.0',
    'natsort==8.4.0',
    'aind-ng-link==1.0.15',
]
full = [
    'aind-data-transfer[ephys]',
    'aind-data-transfer[imaging]'
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "aind_data_transfer.__version__"}

[tool.black]
line-length = 79
target_version = ['py36']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["src", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "from",
    "import",
    "pragma: no cover"
]
fail_under = 0

[tool.isort]
line_length = 79
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail-under = 0
